# kickstarter-china-tracker

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: add-brand.yml  bug.yml  config.yml
.github/workflows/: deploy.yml  email-only.yml  scrape-retry.yml  scrape.yml  test.yml  weekly.yml  worker-deploy.yml
brands/: china_brands.yaml
data/: .brand_candidates.json  blurbs_zh.json  highlights_zh.json  live.json  prelaunch.json  projects-seed.json  projects.json
data/history/: 2026-04-25T14-26-42Z.json  2026-04-25T14-29-05Z.json  2026-04-25T14-54-17Z.json  2026-04-25T15-09-34Z.json  2026-04-25T15-21-21Z.json  2026-04-26T04-22-32Z.json  2026-04-26T04-59-46Z.json  2026-04-26T05-05-52Z.json  2026-04-26T05-08-15Z.json  2026-04-26T05-09-47Z.json  2026-04-26T05-11-28Z.json  2026-04-26T05-25-17Z.json  2026-04-26T05-28-09Z.json  2026-04-26T05-56-51Z.json  2026-04-26T05-59-11Z.json  2026-04-26T09-58-05Z.json  2026-04-26T10-02-40Z.json  2026-04-26T10-15-13Z.json  2026-04-26T10-24-00Z.json  2026-04-26T10-30-06Z.json  2026-04-26T10-52-36Z.json  2026-04-26T10-58-57Z.json  2026-04-26T11-03-52Z.json  2026-04-26T11-48-53Z.json  2026-04-26T12-08-45Z.json  2026-04-26T12-13-05Z.json  2026-04-26T12-17-41Z.json  2026-04-26T12-25-45Z.json  (+90 more)
docs/: API.md  CHANGELOG_features.md  DESIGN_RULES.md  FAILURE_MODES.md  PROXY.md  RUNBOOK.md  SUBSCRIBE_DEPLOY.md
reports/: 2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-08.md  2026-05-09.md  2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-16.md  2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  (+46 more)
scraper/: __init__.py  _common.py  anomalies.py  api.py  atomic.py  backoff.py  banner.py  brand_candidates.py  classify.py  cleanup.py  diff.py  discover.py  email_notify.py  feed.py  health.py  http.py  kicktraq.py  momentum.py  nodriver_transport.py  notify.py  pdf.py  project.py  proxy_auto.py  refresh.py  report.py  run.py  sanity.py  session_state.py  sitemap.py  sleepers.py  social.py  subscribers.py  tier_metrics.py  translate.py  wayback.py  webrobots.py  weekly.py
scripts/: draft_editor_note.py  emergency_refresh.py  gen_changelog.py
site/: 404.html  CNAME  app.js  feed.xml  index.html  manifest.json  robots.txt  sitemap.xml  stats.html  subscribe.html
subscribe-worker/: MIGRATE_TO_KV.md  test_worker.mjs  worker.js  wrangler.toml
(+106 files in other folders)
